# SignalLens

./: .env.example  .gitignore  README.md  ai_intelligence_dashboard_prd.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
services/api/: README.md  alembic.ini  pyproject.toml
services/api/app/: __init__.py  main.py
services/api/app/core/: config.py
services/api/app/db/: models.py  session.py
services/api/app/llm/: kimi_coding.py
services/api/app/schemas/: alerts.py  digest.py  events.py  feed.py  health.py  ingestion.py  llm.py  search.py  (+5 more)
services/api/migrations/: env.py
services/api/scripts/: run_scheduler.py  seed_database.py  smoke_test_demo.py  smoke_test_kimi.py
services/api/tests/: test_alerts.py  test_alpha_vantage.py  test_arxiv.py  test_chinese_social.py  test_classification.py  test_company_briefing.py  test_daily_digest.py  test_demo_smoke.py  test_event_clustering.py  test_feed_actions.py  test_github.py  test_hacker_news.py  test_health.py  test_hugging_face.py  test_ingestion_storage.py  test_kimi_coding.py  test_llm_processing.py  test_local_setup_check.py  test_manual_submissions.py  test_preferences.py  test_product_briefing.py  test_product_hunt.py  test_reddit.py  test_rss.py  test_scheduled_jobs.py  test_scoring.py  test_search.py  test_sec_filings.py  test_seed_data.py  test_settings_backup.py  test_source_management.py  test_stock_briefing.py  test_stock_routes.py  test_stock_watchlist_order.py  test_summarization.py  test_topic_briefing.py  test_watchlist_metadata.py  test_watchlist_routes.py  test_watchlist_source_preferences.py
(+79 files in other folders)
