[project]
name = "signallens-api"
version = "0.1.0"
description = "FastAPI backend for the SignalLens personal AI intelligence dashboard."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "apscheduler>=3.10.4",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "psycopg[binary]>=3.2.1",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
